--- a/部署文档.md
+++ b/部署文档.md
@@ -7,6 +7,9 @@
 
 3、执行 ./install.sh
 
+4、如果安装出错 可以执行 uninstall.sh 文件（先执行 chmod 777 uninstall.sh）
+
+5、如有其它问题，可以反馈到我们的小助理，我们将及时为您提供帮助
 
 现提供两个下载地址，第一个是github上的 https://raw.githubusercontent.com/forkeCn/kuangqie/master/server.tar.gz （默认）
 
