--- a/部署文档.md
+++ b/部署文档.md
@@ -11,10 +11,11 @@
 
 5、如有其它问题，可以反馈到我们的小助理，我们将及时为您提供帮助
 
-现提供两个下载地址，第一个是github上的 https://raw.githubusercontent.com/forkeCn/kuangqie/master/server.tar.gz （默认）
-
-第二个是 阿里云上的 http://forke.oss-cn-hangzhou.aliyuncs.com/server.tar.gz 
+如果github的下载比较慢，可以在将shell 脚本中地址做替换，
 
 修改下图中的地址即可
 ![image](https://forke.oss-cn-hangzhou.aliyuncs.com/2041554351055_.pic_hd.jpg)
+
+http://forke.oss-cn-hangzhou.aliyuncs.com/server.tar.gz 
+
 
