--- a/部署文档.md
+++ b/部署文档.md
@@ -11,11 +11,12 @@
 
 5、如有其它问题，可以反馈到我们的小助理，我们将及时为您提供帮助
 
-如果github的下载比较慢，可以在将shell 脚本中地址做替换，
+如果github的下载比较慢，可以在将shell 脚本中的地址替换成下面的备用地址，
 
 修改下图中的地址即可
 ![image](https://forke.oss-cn-hangzhou.aliyuncs.com/2041554351055_.pic_hd.jpg)
 
+备用地址：
 http://forke.oss-cn-hangzhou.aliyuncs.com/server.tar.gz 
 
 
