--- a/部署文档.md
+++ b/部署文档.md
@@ -11,7 +11,7 @@
 
 5、如有其它问题，可以反馈到我们的小助理，我们将及时为您提供帮助
 
-如果github的下载比较慢，可以在将shell 脚本中的地址替换成下面的备用地址，
+如果github的下载比较慢，可以在将install.sh 脚本中的地址替换成下面的备用地址，
 
 修改下图中的地址即可
 ![image](https://forke.oss-cn-hangzhou.aliyuncs.com/2041554351055_.pic_hd.jpg)
